# CS-Capstone

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt  README.txt~  TO-DO  build.sh
code_ver2/: CMakeLists.txt
code_ver2/include/pcl/apps/hand_obj_tracker/: objTracker.h
code_ver2/include/pcl/apps/hand_obj_tracker/impl/: objTracker.hpp  skinFilter.hpp  skin_tracking.hpp
code_ver2/src/: kinectTest.cpp  objTracker.cpp
data/: andy_hand.pcd
include/: #Tracker.hpp#  Algorithm.hpp  Algorithm.hpp~  AltParticleFilter.hpp  AltParticleFilter.hpp~  CloudViewer.hpp  CloudViewer.hpp~  Collider.hpp  CollisionAlgorithm.hpp  CollisionAlgorithm.hpp~  CollisionDetector.hpp  CollisionDetector.hpp~  Container.hpp  Container.hpp~  HandAlgorithm.hpp  HandAlgorithm.hpp~  KDTracker.hpp  KDTracker.hpp~  NaiveCollider.hpp  NaiveCollider.hpp~  ObjectAlgorithm.hpp  ObjectAlgorithm.hpp~  Octree.hpp  Octree.hpp~  PCDInterface.hpp  PCDInterface.hpp~  PCLUtilities.hpp  PCLUtilities.hpp~  ParticleFilter.hpp  ParticleFilter.hpp~  SkinFilter.hpp  SkinFilter.hpp~  TableSegmenter.hpp  TableSegmenter.hpp~  Tracker.hpp  Tracker.hpp~  Tracker.h~  TrackerManager.hpp  TrackerManager.hpp~  TrackingAlgorithm.hpp  (+3 more)
src/: #ParticleFilter.cpp#  .#Main.cpp  .Main.cpp.swp  AltParticleFilter.cpp  AltParticleFilter.cpp~  CloudViewer.cpp  CloudViewer.cpp~  Container.cpp  Container.cpp~  KDTracker.cpp  KDTracker.cpp.orig  KDTracker.cpp~  Main.cpp  Main.cpp.orig  Main.cpp~  NaiveCollider.cpp  NaiveCollider.cpp~  Octree.cpp  Octree.cpp~  PCDInterface.cpp  PCDInterface.cpp~  PCDReader.cpp~  SkinFilter.cpp  (+14 more)
(+1511 files in other folders)
